# DeDox

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.minimal.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  lint.yml  test.yml
config/: document_types.yaml  metadata_fields.yaml  settings.yaml  urgency_rules.yaml
dedox/: __init__.py  cli.py
dedox/api/: __init__.py  app.py  deps.py
dedox/api/routes/: __init__.py  admin.py  auth.py  config.py  documents.py  health.py  jobs.py  search.py  webhooks.py
dedox/core/: __init__.py  config.py  exceptions.py  image_utils.py
dedox/db/: __init__.py  database.py
dedox/models/: __init__.py  document.py  extraction_field.py  job.py  metadata.py  processing_log.py  user.py
dedox/pipeline/: __init__.py  base.py  orchestrator.py  registry.py
dedox/services/: __init__.py  document_service.py  job_worker.py  openwebui_sync_service.py  paperless_service.py  paperless_setup_service.py  paperless_webhook_service.py
dedox/ui/: __init__.py  routes.py
docs/: AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  GITHUB_ISSUES.md  PRD.md  TASKS.md
docs/plans/: 2026-01-21-llm-extraction-improvements-design.md  2026-01-22-fix-metadata-tags-remove-upload.md
tests/: conftest.py  test_api.py  test_database.py  test_document_service.py  test_job_worker.py  test_paperless_setup.py  test_pipeline.py  test_search.py  test_webhooks.py
(+20 files in other folders)
