[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dedox"
version = "0.1.0"
description = "Self-hosted, privacy-first document ingestion and processing service"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["dedox*"]
